@@ -18,7 +18,8 @@ EXTRA_DIST = \
 	check-1054322.sh 1054322.jpg \
 	check-1054323.sh 1054323.jpg \
 	check-1169170.sh \
-	check-bid37022.sh bid37022.jpg
+	check-bid37022.sh bid37022.jpg \
+	check-tag-description.sh
 
 if HAVE_EXIF_CLI
 
@@ -31,12 +32,13 @@ check_SCRIPTS = \
 	check-1169170.sh \
 	check-bid37022.sh
 
-# These check scripts may take a little long - but are invaluable. :)
+# These check scripts may take a little longer - but are invaluable. :)
 check_SCRIPTS += check-general-images.sh \
 	check-readwrite-identity.sh \
 	check-readwrite-identity-nofixup.sh \
 	check-no-unknown-tags.sh \
-	check-all-mandatory-tags.sh
+	check-all-mandatory-tags.sh \
+	check-tag-description.sh
 
 TESTS = $(check_SCRIPTS)
 
